syntax = "proto3";

option go_package = "./pb";
package pcbook;

import "memory_message.proto";

message CPU {
    string brand = 1;
    string name = 2;
    uint32 cores = 3;
    uint32 threads = 4;
    double min_ghz = 5;
    double max_ghz = 6;
}

message GPU {
    string brand = 1;
    string name = 2;
    uint32 cores = 3;
    uint32 threads = 4;
    double min_ghz = 5;
    double max_ghz = 6;
    Memory memory = 7;
}